Make nag email nicer with health tips

--- a/application/templates/email/competition/notify/body.mustache
+++ b/application/templates/email/competition/notify/body.mustache
@@ -1,14 +1,12 @@
 Hey {{racer_name}},
 
-This is your daily motivational email to achieve your weight goals for your
-{{competition_name}} challenge.
+We're just nagging you to make sure that you're still on track with your {{competition_name}} challenge.
 
-TODO: make this email look pretty
-TODO: insert a motivational and health quote of some kind
-
-Just a reminder that you can (and should) update your weight here:
+Don't forget that you can (and should) update your weight daily using the link below:
 
 http://weightrace.net/view/{{competition_id}}/{{racer_id}}/{{racer_password}}
+
+Oh, and remember: {{health_tip}}.
 
 Cheers,
 The WeightRace Email Robot :-)
