--- a/application/templates/partials/footer.mustache
+++ b/application/templates/partials/footer.mustache
@@ -11,9 +11,8 @@
         <script src="{{baseurl}}js/plugins.min.js"></script>
         <script src="{{baseurl}}js/main.min.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+            var _gaq=[['_setAccount','UA-42912890-1'],['_trackPageview']];
             (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
             g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
             s.parentNode.insertBefore(g,s)}(document,'script'));
