Add UI section for personal options

--- a/application/templates/view/display.mustache
+++ b/application/templates/view/display.mustache
@@ -227,6 +227,40 @@ google.setOnLoadCallback(drawVisualization);
         </li>
     </ul>
 </section>
+<section id="options">
+    <h1>
+        Personal Options
+    </h1>
+    <div>
+        <p>
+            Share your success with your friends on Facebook, Google+ and Twitter!
+        </p>
+        <p>
+            Social buttons go here.
+        </p>
+    </div>
+    <div>
+        <p class="alert">
+            <strong>Caution!</strong> There is no undo for these functions!
+        </p>
+        <form action="" method="post">
+            <input type="submit" name="submit" value="Delete this competition">
+        </form>
+        <form action="" method="post">
+            <input type="submit" name="submit" value="Stop participating in this race">
+        </form>
+        <form action="" method="post">
+            <label for="end_date">End date</label>
+            <input type="text" class="datepicker" name="end_date">
+            <input type="submit" name="submit" value="Change competition end date">
+        </form>
+        <form action="" method="post">
+            <label for="goal_weight">Goal weight</label>
+            <input type="text" name="goal_weight">
+            <input type="submit" name="submit" value="Change my target weight">
+        </form>
+    </div>
+</section>
 <section id="top_losers">
     <h1>
         Last 10 updates
