--- a/css/site.styl
+++ b/css/site.styl
@@ -581,10 +581,12 @@ section#rules
     width 978px
     margin-left auto
     margin-right auto
+    clear both
     h1
         color #444
         text-align center
         font-size 20px
+        margin-top 30px
     ul
         padding 0px
         list-style-type none
@@ -620,6 +622,70 @@ section#rules
         li:nth-child(4)
             h2:before
                 content '4'
+section#options
+    clear both
+    width 978px
+    margin-bottom 70px
+    overflow hidden
+    margin-left auto
+    margin-right auto
+    h1
+        color #444
+        text-align center
+        font-size 20px
+        padding-top 30px
+    div
+        width 484px
+    div:nth-of-type(1)
+        float left
+        margin-right 5px
+    div:nth-of-type(2)
+        float right
+        margin-left 5px
+    .alert
+        background-color #FFAEAE
+        color #600
+        padding 5px
+        -webkit-border-radius: 5px;
+        border-radius: 5px;
+    label
+        display none
+    input
+        min-height 25px
+        max-height 25px
+        width 130px
+        -webkit-border-radius: 5px;
+        border-radius: 5px;
+        border 1px solid #ccc
+        background-color #eee
+        font-size 12px
+        font-family 'Arial', sans-serif !important
+        color #bbb
+        display inline-block
+        padding 0px
+        margin 0px
+        margin-left 10px
+        margin-top 12px
+        padding-left 5px
+        padding-right 5px
+    input[type=submit]
+        width auto
+        -webkit-border-radius: 5px;
+        border-radius: 5px;
+        color #fff
+        display inline-block
+        height 30px !important
+        min-height 25px
+        max-height 25px
+        background-color #00a42b
+        border 1px solid #005115
+        box-shadow none
+        padding 0px
+        padding-left 5px
+        padding-right 5px
+        margin-left 10px
+        font-size 12px
+        font-family 'Arial', sans-serif !important
 section#awards
     clear both
     width 978px
