Make website mobile friendly

--- a/application/templates/create/display.mustache
+++ b/application/templates/create/display.mustache
@@ -5,7 +5,7 @@
     <img src="{{baseurl}}images/graph.png" alt="WeightRace Graph">
 </header>
 <nav>
-    <p><strong><a href="{{baseurl}}">WeightRace.net Alpha version</a></strong></p>
+    <p><strong><a href="{{baseurl}}">WeightRace.net</a></strong></p>
     <form action="{{baseurl}}switch/" method="post">
         <input type="hidden" value="{{currenturl}}" name="currenturl">
         {{^imperial}}
