--- a/css/site.styl
+++ b/css/site.styl
@@ -728,6 +728,7 @@ section#awards
             background-image url('../images/combo.png')
         li:nth-child(6)
             background-image url('../images/lead.png')
+
 footer
     font-size 10px
     font-family 'Arial', sans-serif
@@ -735,3 +736,85 @@ footer
     text-align center
     a
         color #555
+
+@media screen and (max-width: 980px)
+    nav
+        form:nth-of-type(2)
+            display none
+    section#register, section#racers
+        width auto
+        text-align center
+        form
+            fieldset,li
+                margin-left 15px
+                margin-right 15px
+                display inline-block
+                margin-bottom 15px
+                float none
+            fieldset:first-of-type
+                margin-left 15px
+            input.longer
+                width 80%
+    section#racers
+        form
+            fieldset:first-of-type
+                margin-left 0px
+            li:first-child
+                margin-left 15px !important
+    section#graph, section#update, section#options
+        width auto
+    section#options
+        div:nth-of-type(1), div:nth-of-type(2)
+            width auto
+            float none
+            margin-left 20px
+            margin-right 20px
+    section#rules, section#awards
+        width auto
+        text-align center
+        ul
+            li:first-child
+                margin-left 15px
+            li
+                float none
+                display inline-block
+                margin-left 15px
+                margin-right 15px
+                margin-bottom 15px
+
+@media screen and (max-width: 720px)
+    header
+        height 258px
+        img
+            display none
+    nav
+        button#bookmark
+            display none
+
+@media screen and (max-width: 519px)
+    header
+        height 208px
+    header#view
+        p
+            font-size 15px
+    section#racers
+        form
+            fieldset:first-of-type
+                display none
+    section#register
+        h2
+            font-size 20px
+        form
+            label:first-child
+                font-size 20px
+            input:nth-child(2)
+                width auto
+            input.datepicker+span
+                display block
+            input.datepicker+span:after, input.datepicker+span:before
+                display none
+            input[type=submit]
+                width auto
+    section#update
+        textarea:first-of-type
+            width 80%
